--- a/+not-found.html
+++ b/+not-found.html
@@ -193,6 +193,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-1i10wst{font-size:18px;}
 .r-1i6wzkk{-moz-transition-property:opacity;-webkit-transition-property:opacity;transition-property:opacity;}
 .r-1i71y14{gap:14px;}
+.r-1iadsmv{width:150px;}
 .r-1ifxtd0{margin-bottom:16px;}
 .r-1ijim6u{background-color:rgba(26,46,31,1.00);}
 .r-1ikidpy{letter-spacing:0.5px;}
@@ -287,6 +288,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-76blku{height:21px;}
 .r-7cikom{font-size:inherit;}
 .r-7q8q6z{cursor:default;}
+.r-7r4507{height:150px;}
 .r-87bcf5{font-size:80px;}
 .r-8akbws{-webkit-box-orient:vertical;}
 .r-8ay8q1{letter-spacing:0.1px;}
@@ -302,7 +304,6 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-ah5dr5{pointer-events:auto!important;}
 .r-aruset{font-weight:200;}
 .r-b88u0q{font-weight:700;}
-.r-b8lwoo{width:100px;}
 .r-bi4vy9{transform:translateY(100%);}
 .r-bt1l66{min-height:20px;}
 .r-buy8e9{overflow-y:hidden;}
@@ -355,7 +356,6 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-mro3nb{background-color:rgba(21,23,24,1.00);}
 .r-n6v787{font-size:13px;}
 .r-o4n3w5{width:23px;}
-.r-o52ifk{height:100px;}
 .r-ojf8lh{gap:6px;}
 .r-orgf3d{opacity:0;}
 .r-peo1c{min-height:44px;}
@@ -409,5 +409,5 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 @keyframes r-1pzkwqh{0%{transform:translateY(100%);}100%{transform:translateY(0%);}}
 @keyframes r-imtty0{0%{opacity:0;}100%{opacity:1;}}
 @keyframes r-q67da2{0%{transform:translateX(-100%);}100%{transform:translateX(400%);}}
-@keyframes r-t2lo5v{0%{opacity:1;}100%{opacity:0;}}</style><script type="module">globalThis.__EXPO_ROUTER_HYDRATE__=true;</script><link rel="preload" href="/intersections/_expo/static/css/global-59a30c46e27e8062b5a2e41d0f34ed99.css" as="style"><link rel="stylesheet" href="/intersections/_expo/static/css/global-59a30c46e27e8062b5a2e41d0f34ed99.css"></head><body><div id="root"><div class="css-g5y9jx r-13awgt0"></div></div><script src="/intersections/_expo/static/js/web/entry-6078f8fdff092e77784212f36f4a00c7.js" defer></script>
+@keyframes r-t2lo5v{0%{opacity:1;}100%{opacity:0;}}</style><script type="module">globalThis.__EXPO_ROUTER_HYDRATE__=true;</script><link rel="preload" href="/intersections/_expo/static/css/global-59a30c46e27e8062b5a2e41d0f34ed99.css" as="style"><link rel="stylesheet" href="/intersections/_expo/static/css/global-59a30c46e27e8062b5a2e41d0f34ed99.css"></head><body><div id="root"><div class="css-g5y9jx r-13awgt0"></div></div><script src="/intersections/_expo/static/js/web/entry-a7c7a4d13edfa3878d780135efec21f0.js" defer></script>
 </body></html>
