--- a/+not-found.html
+++ b/+not-found.html
@@ -143,6 +143,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-173mzie{transform:scaleY(-1);}
 .r-1777fci{justify-content:center;}
 .r-17bb2tj{animation-duration:0.75s;}
+.r-17c3jg3{background-color:rgba(0,0,0,0.80);}
 .r-17leim2{background-repeat:repeat;}
 .r-17rnw9f{line-height:30px;}
 .r-17s6mgv{justify-content:flex-end;}
@@ -254,12 +255,14 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-1wtj0ep{justify-content:space-between;}
 .r-1wyyakw{z-index:-1;}
 .r-1wzrnnt{margin-top:16px;}
+.r-1x0uki6{margin-top:20px;}
 .r-1x35g6{font-size:24px;}
 .r-1xcajam{position:fixed;}
 .r-1xnzce8{-moz-user-select:text;-webkit-user-select:text;user-select:text;}
 .r-1xpsq9i{box-shadow:0px 3px 3px rgba(0, 0, 0, 0.33);}
 .r-1xzupcd{width:13px;}
 .r-1yef0xd{animation-name:r-11cv4x;}
+.r-1yis5wz{color:rgba(204,204,204,1.00);}
 .r-2eszeu::-webkit-scrollbar{display:none}
 .r-2eszeu{scrollbar-width:none;}
 .r-2o02ov{margin-top:40px;}
@@ -329,12 +332,14 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-eu3ka{height:40px;}
 .r-f4gmv6{gap:16px;}
 .r-f6603h{background-color:rgba(90,45,45,1.00);}
+.r-f9v2oj{max-height:80%;}
 .r-fdjqy7{text-align:left;}
 .r-g3mlsw{animation-name:r-t2lo5v;}
 .r-ghxds0{transform:translateY(0%);}
 .r-gtdqiz{position:-webkit-sticky;position:sticky;}
 .r-h0d30l{height:28px;}
 .r-hbdj1y{background-color:rgba(42,42,62,1.00);}
+.r-hbpseb{line-height:22px;}
 .r-hvns9x{max-width:400px;}
 .r-hxflta{padding-right:env(safe-area-inset-right);}
 .r-icoktb{opacity:0.5;}
@@ -413,5 +418,5 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 @keyframes r-1pzkwqh{0%{transform:translateY(100%);}100%{transform:translateY(0%);}}
 @keyframes r-imtty0{0%{opacity:0;}100%{opacity:1;}}
 @keyframes r-q67da2{0%{transform:translateX(-100%);}100%{transform:translateX(400%);}}
-@keyframes r-t2lo5v{0%{opacity:1;}100%{opacity:0;}}</style><script type="module">globalThis.__EXPO_ROUTER_HYDRATE__=true;</script><link rel="preload" href="/intersections/_expo/static/css/global-59a30c46e27e8062b5a2e41d0f34ed99.css" as="style"><link rel="stylesheet" href="/intersections/_expo/static/css/global-59a30c46e27e8062b5a2e41d0f34ed99.css"></head><body><div id="root"><div class="css-g5y9jx r-13awgt0"></div></div><script src="/intersections/_expo/static/js/web/entry-94e9a650a182bf32323ffed0fd8a86ef.js" defer></script>
+@keyframes r-t2lo5v{0%{opacity:1;}100%{opacity:0;}}</style><script type="module">globalThis.__EXPO_ROUTER_HYDRATE__=true;</script><link rel="preload" href="/intersections/_expo/static/css/global-59a30c46e27e8062b5a2e41d0f34ed99.css" as="style"><link rel="stylesheet" href="/intersections/_expo/static/css/global-59a30c46e27e8062b5a2e41d0f34ed99.css"></head><body><div id="root"><div class="css-g5y9jx r-13awgt0"></div></div><script src="/intersections/_expo/static/js/web/entry-1f88f57c2cdefb2a107066fc4ad0f3bf.js" defer></script>
 </body></html>
