--- a/_sitemap.html
+++ b/_sitemap.html
@@ -210,6 +210,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-1kb76zh{margin-right:8px;}
 .r-1kfrs79{font-weight:600;}
 .r-1kgz20t{border-bottom-color:rgba(42,42,78,1.00);}
+.r-1khnkhu{color:rgba(51,51,51,1.00);}
 .r-1kihuf0{align-self:center;}
 .r-1kl1mp1{height:250px;}
 .r-1ld3bg{top:-4px;}
@@ -296,6 +297,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-726pan{width:31px;}
 .r-76blku{height:21px;}
 .r-7cikom{font-size:inherit;}
+.r-7mdpej{max-width:360px;}
 .r-7q8q6z{cursor:default;}
 .r-7r4507{height:150px;}
 .r-87bcf5{font-size:80px;}
@@ -303,6 +305,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-8ay8q1{letter-spacing:0.1px;}
 .r-95jzfe{padding-top:16px;}
 .r-97e31f{padding-bottom:env(safe-area-inset-bottom);}
+.r-9aw3ui{gap:4px;}
 .r-9daxd3{animation-duration:250ms;}
 .r-9f3iom{color:rgba(160,208,176,1.00);}
 .r-9f4e4p{background-color:rgba(10,26,15,1.00);}
@@ -422,5 +425,5 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 @keyframes r-1pzkwqh{0%{transform:translateY(100%);}100%{transform:translateY(0%);}}
 @keyframes r-imtty0{0%{opacity:0;}100%{opacity:1;}}
 @keyframes r-q67da2{0%{transform:translateX(-100%);}100%{transform:translateX(400%);}}
-@keyframes r-t2lo5v{0%{opacity:1;}100%{opacity:0;}}</style><script type="module">globalThis.__EXPO_ROUTER_HYDRATE__=true;</script><link rel="preload" href="/intersections/_expo/static/css/global-59a30c46e27e8062b5a2e41d0f34ed99.css" as="style"><link rel="stylesheet" href="/intersections/_expo/static/css/global-59a30c46e27e8062b5a2e41d0f34ed99.css"></head><body><div id="root"><div class="css-g5y9jx r-13awgt0"></div></div><script src="/intersections/_expo/static/js/web/entry-ed361a49e182524d62f64752e81072a6.js" defer></script>
+@keyframes r-t2lo5v{0%{opacity:1;}100%{opacity:0;}}</style><script type="module">globalThis.__EXPO_ROUTER_HYDRATE__=true;</script><link rel="preload" href="/intersections/_expo/static/css/global-59a30c46e27e8062b5a2e41d0f34ed99.css" as="style"><link rel="stylesheet" href="/intersections/_expo/static/css/global-59a30c46e27e8062b5a2e41d0f34ed99.css"></head><body><div id="root"><div class="css-g5y9jx r-13awgt0"></div></div><script src="/intersections/_expo/static/js/web/entry-04deff62fe498d491bcd3e0fc5d94606.js" defer></script>
 </body></html>
